--- a/app/src/main/res/layout/fragment_mine_add_from_contact.xml
+++ b/app/src/main/res/layout/fragment_mine_add_from_contact.xml
@@ -6,39 +6,36 @@
     android:layout_height="match_parent"
     android:background="@color/color_white">
 
-
     <RelativeLayout
+        android:id="@+id/rl_tab_bar_container"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y73"
+        android:layout_height="wrap_content"
         android:background="@color/color_0ba8cf">
 
         <ImageView
             android:id="@+id/iv_mine_add_from_contact_back"
             android:clickable="true"
-            android:layout_alignParentBottom="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/x15"
+            android:layout_centerVertical="true"
             android:src="@drawable/nav_tab_back_selector" />
 
         <TextView
-            android:layout_marginBottom="@dimen/y12"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="@dimen/x48"
+            android:layout_toRightOf="@id/iv_mine_add_from_contact_back"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/y48"
+            android:gravity="center_vertical"
             android:text="发送请求"
             android:textSize="@dimen/sp18"
             android:textColor="@color/color_white" />
 
         <ImageView
-            android:visibility="visible"
             android:id="@+id/iv_mine_add_from_contact_send"
-            android:layout_marginBottom="@dimen/y2"
             android:padding="@dimen/x15"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
             android:clickable="true"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/icon_finish" />
@@ -46,11 +43,10 @@
         <ImageView
             android:visibility="gone"
             android:id="@+id/iv_mine_add_from_contact_send_disable"
-            android:layout_marginBottom="@dimen/y2"
             android:padding="@dimen/x15"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
             android:clickable="true"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/icon_finish_disable" />
