--- a/app/src/main/res/layout/activity_bind_device.xml
+++ b/app/src/main/res/layout/activity_bind_device.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <FrameLayout
+            <RelativeLayout
                 android:id="@+id/fLayout_top_bar_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -32,13 +32,14 @@
                     android:src="@drawable/nav_tab_back_selector" />
 
                 <TextView
+                    android:layout_toRightOf="@id/imgV_top_bar_left"
                     android:id="@+id/imgV_top_bar_center"
                     style="@style/text_base_singleLine"
-                    android:layout_gravity="center"
+                    android:layout_centerVertical="true"
                     android:text="@string/DEVICES_TITLE"
                     android:textColor="@color/color_white"
                     android:textSize="@dimen/sp16" />
-            </FrameLayout>
+            </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
@@ -53,7 +54,7 @@
             android:background="@color/color_white"
             hunt:leftDrawable="@drawable/ico_scan_qrcode"
             hunt:rightDrawable="@drawable/icon_mine_arrow_next"
-            hunt:text="扫一扫添加"
+            hunt:text="@string/Tap3_FriendsAdd_QR"
             hunt:textColor="@color/color_383838"
             hunt:textSize="@dimen/sp16" />
 
@@ -76,7 +77,7 @@
             android:background="@color/color_white"
             hunt:leftDrawable="@drawable/icon_home_doorbell_online"
             hunt:rightDrawable="@drawable/icon_mine_arrow_next"
-            hunt:text="智能门铃"
+            hunt:text="@string/CALL_CAMERA_NAME"
             hunt:textColor="@color/color_383838"
             hunt:textSize="@dimen/sp16" />
 
@@ -94,6 +95,7 @@
 
     <FrameLayout
         android:id="@+id/fLayout_bind_device_fragment_container_id"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
