--- a/app/src/main/res/layout/activity_cam_setting.xml
+++ b/app/src/main/res/layout/activity_cam_setting.xml
@@ -163,7 +163,7 @@
                     hunt:sv_image_src="@drawable/icon_setting_electricity"
                     hunt:sv_sub_title="@string/FOOT_TIP_VOTE"
                     hunt:sv_title="@string/HZ_VOTE"
-                    hunt:sv_v_divider="true"
+                    hunt:sv_v_divider="false"
                     hunt:sv_visibility="true" />
 
 
@@ -172,7 +172,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/y42"
                     android:layout_marginBottom="@dimen/y20"
-                    android:layout_marginTop="@dimen/y50"
+                    android:layout_marginTop="@dimen/y61"
                     android:background="@drawable/un_bind_device_btn_seletor"
                     android:gravity="center"
                     android:text="@string/DELETE_CID"
