--- a/app/src/main/res/layout/fragment_home_mine_setting.xml
+++ b/app/src/main/res/layout/fragment_home_mine_setting.xml
@@ -5,32 +5,37 @@
     android:background="@color/color_white"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <FrameLayout
+        android:background="@color/color_0ba8cf"
         android:id="@+id/rl_title_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y73"
-        android:background="@color/color_0ba8cf">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_home_setting_back"
-            android:clickable="true"
-            android:layout_alignParentBottom="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/x15"
-            android:src="@drawable/nav_tab_back_selector" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_marginBottom="@dimen/y12"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="@dimen/x48"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/SETTINGS"
-            android:textSize="@dimen/sp18"
-            android:textColor="@color/color_white" />
+            <ImageView
+                android:id="@+id/iv_home_setting_back"
+                android:clickable="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/x15"
+                android:layout_centerVertical="true"
+                android:src="@drawable/nav_tab_back_selector" />
 
-    </RelativeLayout>
+            <TextView
+                android:gravity="center_vertical"
+                android:layout_marginLeft="@dimen/x48"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/y48"
+                android:text="@string/SETTINGS"
+                android:textSize="@dimen/sp18"
+                android:textColor="@color/color_white" />
+
+        </RelativeLayout>
+
+    </FrameLayout>
 
     <FrameLayout
         android:layout_below="@id/rl_title_bar"
@@ -79,6 +84,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/rl_sound_container"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y54">
 
@@ -113,6 +119,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/rl_vibrate_container"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y54">
 
