--- a/app/src/main/res/layout/fragment_mine_device_share_manager.xml
+++ b/app/src/main/res/layout/fragment_mine_device_share_manager.xml
@@ -6,32 +6,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <FrameLayout
+        android:id="@+id/rl_tab_bar_container"
+        android:background="@color/color_0ba8cf"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y73"
-        android:background="@color/color_0ba8cf">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_home_mine_share_devices_manager_back"
-            android:clickable="true"
-            android:layout_alignParentBottom="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/x15"
-            android:src="@drawable/nav_tab_back_selector" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_centerVertical="true"
+                android:id="@+id/iv_home_mine_share_devices_manager_back"
+                android:clickable="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/x15"
+                android:src="@drawable/nav_tab_back_selector" />
 
-        <TextView
-            android:id="@+id/tv_home_mine_share_devices_name"
-            android:layout_marginBottom="@dimen/y12"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="@dimen/x48"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/EQUIPMENT_NAME"
-            android:textSize="@dimen/sp18"
-            android:textColor="@color/color_white" />
-
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/tv_home_mine_share_devices_name"
+                android:layout_toRightOf="@id/iv_home_mine_share_devices_manager_back"
+                android:singleLine="true"
+                android:gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/y48"
+                android:text="@string/EQUIPMENT_NAME"
+                android:textSize="@dimen/sp18"
+                android:textColor="@color/color_white" />
+        </RelativeLayout>
+    </FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
