--- a/app/src/main/res/layout/fragment_mine_friend_add_by_num.xml
+++ b/app/src/main/res/layout/fragment_mine_friend_add_by_num.xml
@@ -6,38 +6,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <FrameLayout
         android:id="@+id/rl_home_mine_relativesandfriends_add_by_num"
+        android:background="#0BA8CF"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y73"
-        android:background="#0BA8CF">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_home_mine_relativesandfriends_add_by_num_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:padding="@dimen/x15"
-            android:clickable="true"
-            android:src="@drawable/nav_tab_back_selector" />
-
-        <EditText
-            android:id="@+id/et_add_by_number"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/y12"
-            android:layout_marginLeft="@dimen/x48"
-            android:hint="@string/SHARE_ACCOUNT"
-            android:maxLength="65"
-            android:inputType="textVisiblePassword"
-            android:textColor="#ffffff"
-            android:textColorHint="#60ffffff"
-            android:textCursorDrawable="@drawable/search_friend_cursor_color"
-            android:background="@null"
-            android:textSize="@dimen/sp18" />
-    </RelativeLayout>
+            android:layout_height="wrap_content">
 
+            <ImageView
+                android:id="@+id/iv_home_mine_relativesandfriends_add_by_num_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:padding="@dimen/x15"
+                android:clickable="true"
+                android:src="@drawable/nav_tab_back_selector" />
+
+            <EditText
+                android:layout_centerVertical="true"
+                android:id="@+id/et_add_by_number"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/y48"
+                android:layout_marginLeft="@dimen/x48"
+                android:hint="@string/SHARE_ACCOUNT"
+                android:maxLength="65"
+                android:inputType="textVisiblePassword"
+                android:textColor="#ffffff"
+                android:textColorHint="#60ffffff"
+                android:textCursorDrawable="@drawable/search_friend_cursor_color"
+                android:background="@null"
+                android:textSize="@dimen/sp18" />
+        </RelativeLayout>
+    </FrameLayout>
     <FrameLayout
         android:id="@+id/fl_display_find_result"
         android:layout_width="match_parent"
