--- a/app/src/main/res/layout/fragment_mine_friend_detail.xml
+++ b/app/src/main/res/layout/fragment_mine_friend_detail.xml
@@ -5,32 +5,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <FrameLayout
         android:id="@+id/rl_title_bar"
+        android:background="@color/color_0ba8cf"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y73"
-        android:background="@color/color_0ba8cf">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_top_bar_left_back"
-            android:clickable="true"
-            android:layout_alignParentBottom="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/x15"
-            android:src="@drawable/nav_tab_back_selector" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_marginBottom="@dimen/y12"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="@dimen/x48"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Tap3_Friends_Details"
-            android:textSize="@dimen/sp18"
-            android:textColor="@color/color_white" />
+            <ImageView
+                android:id="@+id/iv_top_bar_left_back"
+                android:clickable="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:padding="@dimen/x15"
+                android:src="@drawable/nav_tab_back_selector" />
 
-    </RelativeLayout>
+            <TextView
+                android:layout_marginLeft="@dimen/x48"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/y48"
+                android:gravity="center_vertical"
+                android:text="@string/Tap3_Friends_Details"
+                android:textSize="@dimen/sp18"
+                android:textColor="@color/color_white" />
+        </RelativeLayout>
+    </FrameLayout>
 
     <FrameLayout
         android:layout_below="@id/rl_title_bar"
