--- a/app/src/main/res/layout/fragment_mine_info_set_pwd.xml
+++ b/app/src/main/res/layout/fragment_mine_info_set_pwd.xml
@@ -6,44 +6,48 @@
     android:layout_height="match_parent"
     android:background="@color/color_white">
 
-    <RelativeLayout
+    <FrameLayout
+        android:background="@color/color_0ba8cf"
+        android:id="@+id/rl_tab_bar_container"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y73"
-        android:background="@color/color_0ba8cf">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_mine_set_newpwd_back"
-            android:clickable="true"
-            android:layout_alignParentBottom="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/x15"
-            android:src="@drawable/nav_tab_back_selector" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_top_title"
-            android:layout_marginBottom="@dimen/y12"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="@dimen/x48"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/SET_PWD"
-            android:textSize="@dimen/sp18"
-            android:textColor="@color/color_white" />
+            <ImageView
+                android:id="@+id/iv_mine_set_newpwd_back"
+                android:clickable="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:padding="@dimen/x15"
+                android:src="@drawable/nav_tab_back_selector" />
 
-        <ImageView
-            android:visibility="visible"
-            android:id="@+id/iv_mine_info_set_newpwd_able"
-            android:layout_marginBottom="@dimen/y2"
-            android:padding="@dimen/x15"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:clickable="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/icon_finish_disable" />
+            <TextView
+                android:id="@+id/tv_top_title"
+                android:layout_marginLeft="@dimen/x48"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/y48"
+                android:text="@string/SET_PWD"
+                android:textSize="@dimen/sp18"
+                android:gravity="center_vertical"
+                android:textColor="@color/color_white" />
 
-    </RelativeLayout>
+            <ImageView
+                android:visibility="visible"
+                android:id="@+id/iv_mine_info_set_newpwd_able"
+                android:padding="@dimen/x15"
+                android:layout_alignParentRight="true"
+                android:clickable="true"
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icon_finish_disable" />
+
+        </RelativeLayout>
+    </FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
