--- a/app/src/main/res/layout/fragment_mine_share_to_friend.xml
+++ b/app/src/main/res/layout/fragment_mine_share_to_friend.xml
@@ -6,42 +6,46 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <FrameLayout
+        android:background="#0BA8CF"
         android:id="@+id/rl_mine_share_to_relative_friend"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y73"
-        android:background="#0BA8CF">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_mine_share_to_relative_friend_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:padding="@dimen/x15"
-            android:src="@drawable/nav_tab_back_selector" />
-
-        <TextView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/y12"
-            android:layout_marginLeft="@dimen/x48"
-            android:text="@string/Tap3_ShareDevice_Friends"
-            android:textColor="@color/color_white"
-            android:textSize="@dimen/sp18" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_mine_share_to_relative_friend_true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:clickable="true"
-            android:padding="@dimen/x15"
-            android:text="确定（4/5）"
-            android:textColor="@color/color_white"
-            android:textSize="@dimen/sp14" />
-    </RelativeLayout>
+            <ImageView
+                android:id="@+id/iv_mine_share_to_relative_friend_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/x15"
+                android:layout_centerVertical="true"
+                android:src="@drawable/nav_tab_back_selector" />
+
+            <TextView
+                android:gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/y48"
+                android:layout_marginLeft="@dimen/x48"
+                android:text="@string/Tap3_ShareDevice_Friends"
+                android:textColor="@color/color_white"
+                android:textSize="@dimen/sp18" />
+
+            <TextView
+                android:gravity="center_vertical"
+                android:id="@+id/tv_mine_share_to_relative_friend_true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:clickable="true"
+                android:padding="@dimen/x15"
+                android:text="确定（4/5）"
+                android:textColor="@color/color_white"
+                android:textSize="@dimen/sp14" />
+        </RelativeLayout>
+    </FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
