--- a/app/src/main/res/layout/fragment_friend_add_req_detail.xml
+++ b/app/src/main/res/layout/fragment_friend_add_req_detail.xml
@@ -25,8 +25,8 @@
                 android:src="@drawable/nav_tab_back_selector" />
 
             <TextView
+                android:layout_toRightOf="@id/iv_top_bar_left_back"
                 android:gravity="center_vertical"
-                android:layout_marginLeft="@dimen/x48"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/y48"
                 android:text="@string/Tap3_Friends_Details"
