--- a/app/src/main/res/layout/fragment_home_mine__set_name.xml
+++ b/app/src/main/res/layout/fragment_home_mine__set_name.xml
@@ -26,11 +26,11 @@
                 android:src="@drawable/nav_tab_back_selector" />
 
             <TextView
+                android:layout_toRightOf="@id/iv_top_bar_left_back"
                 android:id="@+id/tv_save_username"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/y48"
                 android:gravity="center_vertical"
-                android:layout_marginLeft="@dimen/x48"
                 android:text="@string/ALIAS"
                 android:textColor="@color/color_white"
                 android:textSize="@dimen/sp18" />
