--- a/app/src/main/res/layout/fragment_home_mine_setting.xml
+++ b/app/src/main/res/layout/fragment_home_mine_setting.xml
@@ -25,8 +25,8 @@
                 android:src="@drawable/nav_tab_back_selector" />
 
             <TextView
+                android:layout_toRightOf="@id/iv_home_setting_back"
                 android:gravity="center_vertical"
-                android:layout_marginLeft="@dimen/x48"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/y48"
                 android:text="@string/SETTINGS"
