--- a/app/src/main/res/layout/fragment_home_mine_setting_about.xml
+++ b/app/src/main/res/layout/fragment_home_mine_setting_about.xml
@@ -26,7 +26,7 @@
                 android:src="@drawable/nav_tab_back_selector" />
 
             <TextView
-                android:layout_marginLeft="@dimen/x48"
+                android:layout_toRightOf="@id/iv_home_setting_about_back"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/y48"
                 android:text="@string/ABOUT"
