--- a/app/src/main/res/layout/fragment_maglive_message.xml
+++ b/app/src/main/res/layout/fragment_maglive_message.xml
@@ -6,32 +6,37 @@
     android:layout_height="match_parent">
 
     <!-- 顶部栏 -->
-    <RelativeLayout
+
+    <FrameLayout
+        android:id="@+id/fl_container"
+        android:background="#0BA8CF"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y72"
-        android:background="#0BA8CF">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:layout_centerVertical="true"
-            android:padding="@dimen/x14"
-            android:layout_alignParentBottom="true"
-            android:id="@+id/iv_msglive_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/nav_tab_back_selector" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/x48"
-            android:layout_marginBottom="@dimen/y12"
-            android:id="@+id/tv_msglive_set"
-            android:layout_alignParentBottom="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/SETTINGS_1"
-            android:textSize="@dimen/sp18"
-            android:textColor="#FFFFFF" />
-    </RelativeLayout>
+            <ImageView
+                android:layout_centerVertical="true"
+                android:padding="@dimen/x15"
+                android:id="@+id/iv_msglive_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/nav_tab_back_selector" />
+
+            <TextView
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/x43"
+                android:id="@+id/tv_msglive_set"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/x48"
+                android:gravity="center_vertical"
+                android:text="@string/SETTINGS_1"
+                android:textSize="@dimen/sp18"
+                android:textColor="#FFFFFF" />
+        </RelativeLayout>
+    </FrameLayout>
 
     <LinearLayout
         android:background="@color/color_white"
