--- a/app/src/main/res/layout/fragment_mine_friend_detail.xml
+++ b/app/src/main/res/layout/fragment_mine_friend_detail.xml
@@ -25,7 +25,7 @@
                 android:src="@drawable/nav_tab_back_selector" />
 
             <TextView
-                android:layout_marginLeft="@dimen/x48"
+                android:layout_toRightOf="@id/iv_top_bar_left_back"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/y48"
                 android:gravity="center_vertical"
