--- a/app/src/main/res/layout/fragment_mine_friend_scan_add.xml
+++ b/app/src/main/res/layout/fragment_mine_friend_scan_add.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/iv_home_mine_relativesandfriends_scan_add_back"
+                android:id="@+id/iv_home_mine_friends_scan_add_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="true"
@@ -29,9 +29,9 @@
                 android:src="@drawable/nav_tab_back_selector" />
 
             <TextView
+                android:layout_toRightOf="@id/iv_home_mine_friends_scan_add_back"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y48"
-                android:layout_marginStart="@dimen/x48"
                 android:gravity="center_vertical"
                 android:text="@string/Tap3_FriendsAdd_QR"
                 android:textColor="@color/color_white"
