--- a/app/src/main/res/layout/fragment_mine_info_bind_phone.xml
+++ b/app/src/main/res/layout/fragment_mine_info_bind_phone.xml
@@ -26,8 +26,8 @@
                 android:src="@drawable/nav_tab_back_selector" />
 
             <TextView
+                android:layout_toRightOf="@id/iv_mine_bind_phone_back"
                 android:id="@+id/tv_title"
-                android:layout_marginLeft="@dimen/x48"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/y48"
                 android:text="@string/Tap0_BindPhoneNo"
