--- a/app/src/main/res/layout/fragment_mine_info_set_password.xml
+++ b/app/src/main/res/layout/fragment_mine_info_set_password.xml
@@ -26,7 +26,7 @@
                 android:src="@drawable/nav_tab_back_selector" />
 
             <TextView
-                android:layout_marginLeft="@dimen/x48"
+                android:layout_toRightOf="@id/iv_mine_personal_setpassword_back"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/y48"
                 android:text="@string/CHANGE_PWD"
