--- a/app/src/main/res/layout/fragment_mine_share_device.xml
+++ b/app/src/main/res/layout/fragment_mine_share_device.xml
@@ -25,10 +25,10 @@
                 android:src="@drawable/nav_tab_back_selector" />
 
             <TextView
+                android:layout_toRightOf="@id/iv_home_mine_sharedevices_back"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y48"
                 android:gravity="center_vertical"
-                android:layout_marginLeft="@dimen/x48"
                 android:text="@string/Tap3_ShareDevice"
                 android:textColor="@color/color_white"
                 android:textSize="@dimen/sp18" />
