--- a/app/src/main/res/layout/frgment_mine_share_to_contact.xml
+++ b/app/src/main/res/layout/frgment_mine_share_to_contact.xml
@@ -25,7 +25,7 @@
                 android:src="@drawable/nav_tab_back_selector" />
 
             <FrameLayout
-                android:layout_marginLeft="@dimen/x48"
+                android:layout_toRightOf="@id/iv_mine_share_to_contact_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
