--- a/app/src/main/res/layout/layout_suggestion_recycleview_list.xml
+++ b/app/src/main/res/layout/layout_suggestion_recycleview_list.xml
@@ -6,25 +6,16 @@
     android:layout_marginBottom="@dimen/y4">
 
     <android.support.v7.widget.RecyclerView
+        android:overScrollMode="never"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rv_home_mine_suggestion"
     />
-    <include
-        layout="@layout/layout_loading_progress_rotate"
-        />
+
+    <include layout="@layout/layout_loading_progress_rotate" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/y10"
         android:background="@drawable/little_shape" />
 </FrameLayout>
-
-    <!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--android:layout_width="match_parent"-->
-<!--android:id="@+id/rv_home_mine_suggestion"-->
-<!--android:layout_height="@dimen/y0"-->
-<!--android:layout_weight="1.0"-->
-<!--android:layout_marginBottom="@dimen/y4"-->
-    <!--/>-->
