--- a/app/src/main/res/layout/activity_new_home.xml
+++ b/app/src/main/res/layout/activity_new_home.xml
@@ -36,7 +36,7 @@
                 android:checked="true"
                 android:drawableTop="@drawable/icon_bottom_clever_dog_selector"
                 android:paddingBottom="@dimen/y3"
-                android:text="@string/app_name"/>
+                android:text="@string/Tap1_TitleName"/>
 
             <RadioButton
                 android:id="@+id/btn_home_wonderful"
