--- a/app/src/main/res/layout/fragment_home_mine_info.xml
+++ b/app/src/main/res/layout/fragment_home_mine_info.xml
@@ -16,7 +16,7 @@
 
         <TextView
             android:id="@+id/iv_home_mine_personal_back"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="@dimen/y48"
             android:drawablePadding="@dimen/x15"
             android:drawableLeft="@drawable/nav_tab_back_selector"
