--- a/app/src/main/res/layout/fragment_home_mine_message.xml
+++ b/app/src/main/res/layout/fragment_home_mine_message.xml
@@ -46,6 +46,7 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rcl_home_mine_message_recyclerview"
+                android:overScrollMode="never"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             </android.support.v7.widget.RecyclerView>
