--- a/app/src/main/res/layout/fragment_mine_friend_add_from_contact.xml
+++ b/app/src/main/res/layout/fragment_mine_friend_add_from_contact.xml
@@ -40,6 +40,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rcy_contact_list"
+            android:overScrollMode="never"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         </android.support.v7.widget.RecyclerView>
