--- a/app/src/main/res/layout/fragment_mine_friend_share_devices.xml
+++ b/app/src/main/res/layout/fragment_mine_friend_share_devices.xml
@@ -72,6 +72,7 @@
             <android.support.v7.widget.RecyclerView
                 android:layout_marginLeft="@dimen/x15"
                 android:id="@+id/rcy_share_device_list"
+                android:overScrollMode="never"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             </android.support.v7.widget.RecyclerView>
