--- a/app/src/main/res/layout/fragment_mine_info_mailbox.xml
+++ b/app/src/main/res/layout/fragment_mine_info_mailbox.xml
@@ -63,6 +63,7 @@
                 android:layout_marginRight="@dimen/x20"
                 android:background="@null"
                 android:hint="@string/EMAIL_1"
+                android:textCursorDrawable="@drawable/search_friend_cursor_color"
                 android:maxLength="65"
                 android:textColor="@color/color_333333"
                 android:textSize="@dimen/sp16" />
