--- a/app/src/main/res/layout/fragment_mine_share_device.xml
+++ b/app/src/main/res/layout/fragment_mine_share_device.xml
@@ -42,6 +42,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycle_share_device_list"
+            android:overScrollMode="never"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         </android.support.v7.widget.RecyclerView>
