--- a/app/src/main/res/layout/fragment_mine_share_to_friend.xml
+++ b/app/src/main/res/layout/fragment_mine_share_to_friend.xml
@@ -53,6 +53,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rcy_mine_share_to_relative_and_friend_list"
+            android:overScrollMode="never"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         </android.support.v7.widget.RecyclerView>
