--- a/app/src/main/res/layout/wonder_time_indicator.xml
+++ b/app/src/main/res/layout/wonder_time_indicator.xml
@@ -16,7 +16,8 @@
         android:layout_marginTop="13dp"
         android:text="五月"
         android:textColor="#333333"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:textStyle="bold"/>
 
 
     <android.support.v7.widget.RecyclerView
