--- a/app/src/main/res/layout/fragment_simple_dialog.xml
+++ b/app/src/main/res/layout/fragment_simple_dialog.xml
@@ -1,13 +1,14 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.cylan.jiafeigou.widget.dialog.SimpleDialogFragment">
+                                    xmlns:tools="http://schemas.android.com/tools"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    tools:context="com.cylan.jiafeigou.widget.dialog.SimpleDialogFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="@dimen/y20">
 
         <TextView
             android:id="@+id/tv_dialog_title"
@@ -15,17 +16,18 @@
             android:layout_height="@dimen/y48"
             android:layout_marginLeft="@dimen/x25"
             android:layout_marginRight="@dimen/x25"
-            android:layout_marginTop="@dimen/y20"
             android:gravity="center"
             android:textColor="@color/color_979797"
-            android:textSize="@dimen/sp16" />
+            android:textSize="@dimen/sp16"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/tv_dialog_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/x25"
-            android:layout_marginRight="@dimen/x25" />
+            android:layout_marginRight="@dimen/x25"
+            android:text="是否删除"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -43,7 +45,7 @@
                 android:padding="@dimen/x10"
                 android:text="确定"
                 android:textColor="@color/color_4b9fd5"
-                android:textSize="@dimen/sp14" />
+                android:textSize="@dimen/sp14"/>
 
             <TextView
                 android:id="@+id/tv_dialog_btn_right"
@@ -54,7 +56,7 @@
                 android:padding="@dimen/x10"
                 android:text="取消"
                 android:textColor="@color/color_4b9fd5"
-                android:textSize="@dimen/sp14" />
+                android:textSize="@dimen/sp14"/>
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
