--- a/app/src/main/res/layout/activity_bell_live.xml
+++ b/app/src/main/res/layout/activity_bell_live.xml
@@ -22,21 +22,27 @@
                 android:id="@+id/act_bell_live_video_picture"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:src="@drawable/default_diagram_mask"
                 android:scaleType="fitXY"/>
 
         </FrameLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="返回"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/tv_bell_live_flow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:layout_margin="@dimen/x15"
+            android:layout_margin="@dimen/y15"
             android:background="@drawable/live_flow_transparent_bg"
             android:gravity="center"
             android:paddingBottom="@dimen/y5"
-            android:paddingLeft="@dimen/x8"
-            android:paddingRight="@dimen/x8"
+            android:paddingLeft="@dimen/y8"
+            android:paddingRight="@dimen/y8"
             android:paddingTop="@dimen/y5"
             android:textColor="@color/color_white"
             android:textSize="@dimen/sp13"
@@ -47,14 +53,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/x10"
-            android:padding="@dimen/x10"
+            android:layout_margin="@dimen/y10"
+            android:padding="@dimen/y10"
             android:src="@drawable/icon_live_zoom_full_screen"/>
     </FrameLayout>
 
 
     <FrameLayout
         android:layout_width="match_parent"
+        android:layout_marginTop="@dimen/y113"
         android:layout_height="match_parent">
 
         <include layout="@layout/layout_bell_pre_live_hot_seat"/>
@@ -63,36 +70,4 @@
 
     </FrameLayout>
 
-    <com.cylan.jiafeigou.widget.bell.DragLayout
-        android:id="@+id/dLayout_bell_hot_seat"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        hunt:ll_big_outer_radius="@dimen/x10">
-
-
-        <com.cylan.jiafeigou.widget.bell.LLView
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/y50"
-            android:layout_gravity="center_vertical"
-            hunt:ll_big_inner_radius="@dimen/x5"
-            hunt:ll_big_outer_radius="@dimen/x10"
-            hunt:ll_small_interval="@dimen/x10"
-            hunt:ll_small_radius="@dimen/x3"/>
-
-        <com.cylan.jiafeigou.widget.bell.LLView
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/y50"
-            android:layout_gravity="center_vertical|end"
-            hunt:ll_big_inner_radius="@dimen/x5"
-            hunt:ll_big_outer_radius="@dimen/x10"
-            hunt:ll_reverse="true"
-            hunt:ll_small_interval="@dimen/x10"
-            hunt:ll_small_radius="@dimen/x3"/>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@mipmap/ic_launcher"/>
-    </com.cylan.jiafeigou.widget.bell.DragLayout>
 </LinearLayout>
