--- a/app/src/main/res/layout/layout_dialog_low_battery.xml
+++ b/app/src/main/res/layout/layout_dialog_low_battery.xml
@@ -1,14 +1,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="@dimen/y280"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".n.view.cam.SetSensitivityDialogFragment">
+
+<android.support.v7.widget.CardView
+    android:layout_width="match_parent"
+    app:cardCornerRadius="9dp"
+    android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
+
 
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:layout_width="match_parent"
@@ -22,51 +33,40 @@
             android:background="@drawable/doorbell_pic_popup" />
     </FrameLayout>
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bottom_corner_pop_bg"
-        android:orientation="vertical"
-        android:paddingLeft="@dimen/x10"
-        android:paddingRight="@dimen/x10"
-        android:paddingTop="@dimen/y17">
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="设备电量较低 请及时充电"
+            android:text="@string/DOOR_LOW_BATTERY"
+            android:layout_marginTop="@dimen/y17"
+            android:layout_marginStart="@dimen/y23"
             android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp15" />
+            android:textSize="@dimen/sp16" />
 
         <TextView
             android:id="@+id/tv_low_battery_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/y23"
+            android:layout_marginEnd="@dimen/y14"
             android:layout_marginTop="@dimen/y17"
-            android:text="@string/DOOR_LOW_BATTERY"
+            android:text="@string/DOOR_BETTERYMESG"
             android:textColor="@color/color_666666"
-            android:textSize="@dimen/sp15" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/y1"
-            android:layout_marginTop="@dimen/y18"
-            android:background="@color/color_E1E1E1" />
+            android:textSize="@dimen/sp14" />
 
         <TextView
             android:id="@+id/tv_low_battery_dismiss"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/y48"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/y38"
             android:layout_gravity="end"
-            android:layout_marginLeft="@dimen/x20"
-            android:layout_marginRight="@dimen/x20"
+            android:layout_marginEnd="@dimen/y27"
+            android:layout_marginBottom="@dimen/y19"
             android:gravity="center"
-            android:text="知道了"
+            android:text="@string/I_KNOW"
             android:textColor="@color/color_4b9fd5"
-            android:textSize="@dimen/sp15" />
+            android:textSize="@dimen/sp14" />
     </LinearLayout>
-
+</android.support.v7.widget.CardView>
     <ImageView
         android:id="@+id/imgv_close_dialog"
         android:layout_width="wrap_content"
