门铃消息查看大图

--- a/app/src/main/res/layout/activity_door_bell.xml
+++ b/app/src/main/res/layout/activity_door_bell.xml
@@ -24,8 +24,8 @@
                 android:id="@+id/tv_top_bar_left"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawablePadding="@dimen/x15"
-                android:padding="@dimen/x15"
+                android:drawablePadding="@dimen/y15"
+                android:padding="@dimen/y15"
                 android:drawableLeft="@drawable/nav_tab_back_selector"
                 android:text="智能门铃"
                 android:textColor="@color/color_white"
