--- a/app/src/main/res/layout/activity_bell_live.xml
+++ b/app/src/main/res/layout/activity_bell_live.xml
@@ -27,26 +27,53 @@
 
         </FrameLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:text="返回"
-            android:layout_height="wrap_content" />
+
+        <FrameLayout
+            android:background="@drawable/doorbell_shadow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
 
         <TextView
-            android:id="@+id/tv_bell_live_flow"
+            android:id="@+id/tv_bell_live_land_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_margin="@dimen/y15"
-            android:background="@drawable/live_flow_transparent_bg"
-            android:gravity="center"
-            android:paddingBottom="@dimen/y5"
-            android:paddingLeft="@dimen/y8"
-            android:paddingRight="@dimen/y8"
-            android:paddingTop="@dimen/y5"
+            android:drawableLeft="@drawable/nav_icon_back_white"
+            android:drawablePadding="@dimen/y20"
+            android:padding="@dimen/y15"
+            android:text="房间"
             android:textColor="@color/color_white"
-            android:textSize="@dimen/sp13"
-            android:visibility="invisible"/>
+            android:textSize="@dimen/sp16" />
+            <!--<TextView-->
+                <!--android:id="@+id/tv_top_bar_left"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:drawablePadding="@dimen/y15"-->
+                <!--android:padding="@dimen/y15"-->
+                <!--android:layout_marginStart="@dimen/y8"-->
+                <!--android:layout_marginTop="@dimen/y9"-->
+                <!--android:drawableLeft="@drawable/nav_tab_back_selector"-->
+                <!--android:textColor="@color/color_white"-->
+                <!--android:textSize="@dimen/sp16" />-->
+
+            <TextView
+                android:id="@+id/tv_bell_live_flow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_margin="@dimen/y15"
+                android:background="@drawable/live_flow_transparent_bg"
+                android:gravity="center"
+                android:text="0kb"
+                android:paddingBottom="@dimen/y5"
+                android:paddingLeft="@dimen/y8"
+                android:paddingRight="@dimen/y8"
+                android:paddingTop="@dimen/y5"
+                android:textColor="@color/color_white"
+                android:textSize="@dimen/sp13"
+                android:visibility="visible"/>
+
+
 
         <ImageView
             android:id="@+id/imgv_bell_live_switch_to_land"
