--- a/app/src/main/res/layout/activity_bell_record_detail.xml
+++ b/app/src/main/res/layout/activity_bell_record_detail.xml
@@ -14,26 +14,6 @@
         android:layout_gravity="center"
         android:src="@drawable/ic_delete_photo" />
 
-    <RelativeLayout
-        android:id="@+id/act_bell_header_container"
-        style="@style/video_header_container">
-
-        <ImageView
-            android:id="@+id/act_bell_header_back"
-            style="@style/video_header_back" />
-
-        <TextView
-            android:id="@+id/act_bell_header_title"
-            style="@style/video_header_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textColor="#FFFFFF"
-            android:textSize="@dimen/sp18" />
-
-    </RelativeLayout>
-
-
     <FrameLayout
         android:id="@+id/act_bell_pic_option"
         android:layout_width="match_parent"
@@ -53,5 +33,31 @@
             android:id="@+id/act_bell_picture_opt_collection"
             style="@style/picture_opt_collection" />
     </FrameLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/act_bell_header_container"
+        style="@style/video_header_container">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="48dp">
+
+            <ImageView
+                android:id="@+id/act_bell_header_back"
+                style="@style/video_header_back" />
+
+            <TextView
+                android:id="@+id/act_bell_header_title"
+                style="@style/video_header_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:textColor="#FFFFFF"
+                android:textSize="@dimen/sp18" />
+
+        </RelativeLayout>
+
+    </RelativeLayout>
 
 </FrameLayout>
